// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 3 expenses totaling $1,141.95
  </h1>
</div>
`;

exports[`should render ExpensesSummary with no expenses 1`] = `
<div>
  <h1>
    Viewing 0 expenses totaling $0.00
  </h1>
</div>
`;

exports[`should render ExpensesSummary with single expense 1`] = `
<div>
  <h1>
    Viewing 1 expense totaling $1.95
  </h1>
</div>
`;
